--- a/RTutorialFiles/IntroToR_3.Rmd
+++ b/RTutorialFiles/IntroToR_3.Rmd
@@ -84,6 +84,11 @@ Next, download the data files (you may need to right-click these links and choos
 
 Put the data files in the folder called "data".
 
+>  **Note:** If you're using Windows, your browser may want to save these files as ".txt" files, rather than ".csv" files. That's fine - the data won't change - but you might get some errors when it comes to loading the files in R (because the filenames are different). To fix this, I reccommend that you:
+> -  Make Windows show file extensions in the File Explorer (see [here](https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/))
+> -  Download the files as ".txt" files.
+> -  In File Explorer, find the files and rename them to end in ".csv"
+
 These files are the same kinds as you can download from D-PLACE. However, I've edited them slightly to make things easier for this tutorial.
 
 ## Setting the working directory {.tabset .tabset-fade .tabset-pills}
